--- a/webserver/templates/timeseries.html
+++ b/webserver/templates/timeseries.html
@@ -12,6 +12,22 @@
 </head>
 
 <body>
+<script type="text/javascript" src="/green.js"></script>
+<script type="text/javascript" >
+$(function () {
+
+  Line('#container0');
+  //The train example
+  //Line('#container1');
+  
+  Line('#container2');
+  Line('#container3');
+    
+
+
+});
+</script>
+
 <div>
 
 </div>
@@ -29,9 +45,9 @@
 <div class="span5" >
 
   <i class="offset1 icon-user"></i> 
-  <input class="span2 text"> </input>
-  <div class="btn"> <i class="icon-circle-arrow-down"></i> </div>
-  <div class="btn"> <i class="icon-time"></i> </div>
+  <input class="span2 text" id="user_ida"> </input>
+  <button class="btn" onclick="button1()"> <i class="icon-circle-arrow-down"></i> </button>
+  <button class="btn" onclick="button11()"> <i class="icon-time"></i> </button>
 
 <div id="container0"></div>
 
@@ -66,7 +82,6 @@
 
 </div> 
 <div class="span3">
-  <!--/br>
   </br>
   </br>
   </br>
@@ -74,10 +89,12 @@
   </br>
   </br>
   </br>
-  <button class="span2 btn-success"> CO2 scatter <i class="icon-chevron-right"></i></button></br>
+  </br>
+  <!--button class="span2 btn-success"> CO2 scatter <i class="icon-chevron-right"></i></button-->
+  <span class="offset1 badge badge-info">3</span></br>
   </br>
   </br>
-  <button class="span2 btn-primary"> Cost scatter <i class="icon-chevron-right"></i></button></br-->
+  <!--button class="span2 btn-primary"> Cost scatter <i class="icon-chevron-right"></i></button></br-->
 
 </div>
 
@@ -88,116 +105,6 @@
 
 </div>
 </div>
-
-<script type="text/javascript" >
-$(function () {
-
-  Line('#container0');
-  //The train example
-  //Line('#container1');
-  
-  Line('#container2');
-  Line('#container3');
-    
-
-
-});
-
-function Line(name){
-
-        $(name).highcharts({
-            title: {
-                text: 'Monthly Average Temperature',
-                x: -20 //center
-            },
-            subtitle: {
-                text: 'Source: WorldClimate.com',
-                x: -20
-            },
-            xAxis: {
-                categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-                    'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
-            },
-            yAxis: {
-                title: {
-                    text: 'Temperature (°C)'
-                },
-                plotLines: [{
-                    value: 0,
-                    width: 1,
-                    color: '#808080'
-                }]
-            },
-            tooltip: {
-                valueSuffix: '°C'
-            },
-            legend: {
-                layout: 'vertical',
-                align: 'right',
-                verticalAlign: 'middle',
-                borderWidth: 0
-            },
-            series: [{
-                name: 'Tokyo',
-                data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
-            }, {
-                name: 'New York',
-                data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5]
-            }, {
-                name: 'Berlin',
-                data: [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0]
-            }, {
-                name: 'London',
-                data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
-            }]
-        });
-   
-    
-
-}
-function Scatter(name){
-
-  $(name).highcharts({
-            chart: {
-            },
-            xAxis: {
-                min: -0.5,
-                max: 5.5
-            },
-            yAxis: {
-                min: 0
-            },
-            title: {
-                text: 'Scatter plot with regression line'
-            },
-            series: [{
-                type: 'line',
-                name: 'Regression Line',
-                data: [[0, 1.11], [5, 4.51]],
-                marker: {
-                    enabled: false
-                },
-                states: {
-                    hover: {
-                        lineWidth: 0
-                    }
-                },
-                enableMouseTracking: false
-            }, {
-                type: 'scatter',
-                name: 'Observations',
-                data: [1, 1.5, 2.8, 3.5, 3.9, 4.2],
-                marker: {
-                    radius: 4
-                }
-            }]
-        });
-}
-    
-
-
-
-</script>
 </body>
 
 </html>
